// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test existing resources 1`] = `
Object {
  "Resources": Object {
    "testeventbridgekinesisstreamexistingresourceEventsRuleC7743154": Object {
      "Properties": Object {
        "Description": "event rule props",
        "ScheduleExpression": "rate(5 minutes)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "testexistingstreamA6CF7AE7",
                "Arn",
              ],
            },
            "Id": "Target0",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "testeventbridgekinesisstreamexistingresourceeventsRoleFD13459F",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "testeventbridgekinesisstreamexistingresourceKinesisStreamGetRecordsIteratorAgeAlarmE700B5FA": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Record Processing Falling Behind, there is risk for data loss due to record expiration.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "GetRecords.IteratorAgeMilliseconds",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Maximum",
        "Threshold": 2592000,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testeventbridgekinesisstreamexistingresourceKinesisStreamReadProvisionedThroughputExceededAlarmA06674FD": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Application is Reading at a Slower Rate Than Expected.",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "ReadProvisionedThroughputExceeded",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testeventbridgekinesisstreamexistingresourceeventsRoleDefaultPolicy126D4DED": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "kinesis:ListShards",
                "kinesis:PutRecord",
                "kinesis:PutRecords",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "testexistingstreamA6CF7AE7",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testeventbridgekinesisstreamexistingresourceeventsRoleDefaultPolicy126D4DED",
        "Roles": Array [
          Object {
            "Ref": "testeventbridgekinesisstreamexistingresourceeventsRoleFD13459F",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "testeventbridgekinesisstreamexistingresourceeventsRoleFD13459F": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Events Rule Role",
      },
      "Type": "AWS::IAM::Role",
    },
    "testexistingstreamA6CF7AE7": Object {
      "Properties": Object {
        "Name": "existing-stream",
        "RetentionPeriodHours": 48,
        "ShardCount": 5,
      },
      "Type": "AWS::Kinesis::Stream",
    },
  },
}
`;

exports[`Test snapshot match with default parameters 1`] = `
Object {
  "Resources": Object {
    "testeventbridgekinesisstreamsdefaultparametersEventsRuleFFD1F314": Object {
      "Properties": Object {
        "Description": "event rule props",
        "ScheduleExpression": "rate(5 minutes)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "testeventbridgekinesisstreamsdefaultparametersKinesisStream9FB4F7F1",
                "Arn",
              ],
            },
            "Id": "Target0",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "testeventbridgekinesisstreamsdefaultparameterseventsRole94A3623E",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "testeventbridgekinesisstreamsdefaultparametersKinesisStream9FB4F7F1": Object {
      "Properties": Object {
        "RetentionPeriodHours": 24,
        "ShardCount": 1,
        "StreamEncryption": Object {
          "EncryptionType": "KMS",
          "KeyId": "alias/aws/kinesis",
        },
      },
      "Type": "AWS::Kinesis::Stream",
    },
    "testeventbridgekinesisstreamsdefaultparametersKinesisStreamGetRecordsIteratorAgeAlarmE0D529DB": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Record Processing Falling Behind, there is risk for data loss due to record expiration.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "GetRecords.IteratorAgeMilliseconds",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Maximum",
        "Threshold": 2592000,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testeventbridgekinesisstreamsdefaultparametersKinesisStreamReadProvisionedThroughputExceededAlarmF8AE8C5D": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Application is Reading at a Slower Rate Than Expected.",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "ReadProvisionedThroughputExceeded",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testeventbridgekinesisstreamsdefaultparameterseventsRole94A3623E": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Events Rule Role",
      },
      "Type": "AWS::IAM::Role",
    },
    "testeventbridgekinesisstreamsdefaultparameterseventsRoleDefaultPolicyB5CCC5D7": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "kinesis:ListShards",
                "kinesis:PutRecord",
                "kinesis:PutRecords",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "testeventbridgekinesisstreamsdefaultparametersKinesisStream9FB4F7F1",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testeventbridgekinesisstreamsdefaultparameterseventsRoleDefaultPolicyB5CCC5D7",
        "Roles": Array [
          Object {
            "Ref": "testeventbridgekinesisstreamsdefaultparameterseventsRole94A3623E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`check eventbus property, snapshot & eventbus exists 1`] = `
Object {
  "Resources": Object {
    "testeventbridgekinesisstreamsdefaultparametersCustomEventBus62772BCD": Object {
      "Properties": Object {
        "Name": "testeventbridgekinesisstreamsdefaultparametersCustomEventBus22157231",
      },
      "Type": "AWS::Events::EventBus",
    },
    "testeventbridgekinesisstreamsdefaultparametersEventsRuleFFD1F314": Object {
      "Properties": Object {
        "EventBusName": Object {
          "Ref": "testeventbridgekinesisstreamsdefaultparametersCustomEventBus62772BCD",
        },
        "EventPattern": Object {
          "source": Array [
            "solutionsconstructs",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "testeventbridgekinesisstreamsdefaultparametersKinesisStream9FB4F7F1",
                "Arn",
              ],
            },
            "Id": "Target0",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "testeventbridgekinesisstreamsdefaultparameterseventsRole94A3623E",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "testeventbridgekinesisstreamsdefaultparametersKinesisStream9FB4F7F1": Object {
      "Properties": Object {
        "RetentionPeriodHours": 24,
        "ShardCount": 1,
        "StreamEncryption": Object {
          "EncryptionType": "KMS",
          "KeyId": "alias/aws/kinesis",
        },
      },
      "Type": "AWS::Kinesis::Stream",
    },
    "testeventbridgekinesisstreamsdefaultparametersKinesisStreamGetRecordsIteratorAgeAlarmE0D529DB": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Record Processing Falling Behind, there is risk for data loss due to record expiration.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "GetRecords.IteratorAgeMilliseconds",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Maximum",
        "Threshold": 2592000,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testeventbridgekinesisstreamsdefaultparametersKinesisStreamReadProvisionedThroughputExceededAlarmF8AE8C5D": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Application is Reading at a Slower Rate Than Expected.",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "ReadProvisionedThroughputExceeded",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testeventbridgekinesisstreamsdefaultparameterseventsRole94A3623E": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Events Rule Role",
      },
      "Type": "AWS::IAM::Role",
    },
    "testeventbridgekinesisstreamsdefaultparameterseventsRoleDefaultPolicyB5CCC5D7": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "kinesis:ListShards",
                "kinesis:PutRecord",
                "kinesis:PutRecords",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "testeventbridgekinesisstreamsdefaultparametersKinesisStream9FB4F7F1",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testeventbridgekinesisstreamsdefaultparameterseventsRoleDefaultPolicyB5CCC5D7",
        "Roles": Array [
          Object {
            "Ref": "testeventbridgekinesisstreamsdefaultparameterseventsRole94A3623E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`check multiple constructs in a single stack 1`] = `
Object {
  "Resources": Object {
    "testneweventbridgekinesisstreams1CustomEventBus1A176E0B": Object {
      "Properties": Object {
        "Name": "testneweventbridgekinesisstreams1CustomEventBusC824F9F2",
      },
      "Type": "AWS::Events::EventBus",
    },
    "testneweventbridgekinesisstreams1EventsRule2E6D88D9": Object {
      "Properties": Object {
        "EventBusName": Object {
          "Ref": "testneweventbridgekinesisstreams1CustomEventBus1A176E0B",
        },
        "EventPattern": Object {
          "source": Array [
            "solutionsconstructs",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "testneweventbridgekinesisstreams1KinesisStream7E0380F0",
                "Arn",
              ],
            },
            "Id": "Target0",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "testneweventbridgekinesisstreams1eventsRole7C6CD7A1",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "testneweventbridgekinesisstreams1KinesisStream7E0380F0": Object {
      "Properties": Object {
        "RetentionPeriodHours": 24,
        "ShardCount": 1,
        "StreamEncryption": Object {
          "EncryptionType": "KMS",
          "KeyId": "alias/aws/kinesis",
        },
      },
      "Type": "AWS::Kinesis::Stream",
    },
    "testneweventbridgekinesisstreams1KinesisStreamGetRecordsIteratorAgeAlarm98F5DB9F": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Record Processing Falling Behind, there is risk for data loss due to record expiration.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "GetRecords.IteratorAgeMilliseconds",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Maximum",
        "Threshold": 2592000,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testneweventbridgekinesisstreams1KinesisStreamReadProvisionedThroughputExceededAlarm63B214D9": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Application is Reading at a Slower Rate Than Expected.",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "ReadProvisionedThroughputExceeded",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testneweventbridgekinesisstreams1eventsRole7C6CD7A1": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Events Rule Role",
      },
      "Type": "AWS::IAM::Role",
    },
    "testneweventbridgekinesisstreams1eventsRoleDefaultPolicyFA21F8A8": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "kinesis:ListShards",
                "kinesis:PutRecord",
                "kinesis:PutRecords",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "testneweventbridgekinesisstreams1KinesisStream7E0380F0",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testneweventbridgekinesisstreams1eventsRoleDefaultPolicyFA21F8A8",
        "Roles": Array [
          Object {
            "Ref": "testneweventbridgekinesisstreams1eventsRole7C6CD7A1",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "testneweventbridgekinesisstreams2CustomEventBus9FCEF58F": Object {
      "Properties": Object {
        "Name": "testneweventbridgekinesisstreams2CustomEventBus458FACFC",
      },
      "Type": "AWS::Events::EventBus",
    },
    "testneweventbridgekinesisstreams2EventsRuleF14C5405": Object {
      "Properties": Object {
        "EventBusName": Object {
          "Ref": "testneweventbridgekinesisstreams2CustomEventBus9FCEF58F",
        },
        "EventPattern": Object {
          "source": Array [
            "solutionsconstructs",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "testneweventbridgekinesisstreams2KinesisStreamBC538A18",
                "Arn",
              ],
            },
            "Id": "Target0",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "testneweventbridgekinesisstreams2eventsRole9E13686D",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "testneweventbridgekinesisstreams2KinesisStreamBC538A18": Object {
      "Properties": Object {
        "RetentionPeriodHours": 24,
        "ShardCount": 1,
        "StreamEncryption": Object {
          "EncryptionType": "KMS",
          "KeyId": "alias/aws/kinesis",
        },
      },
      "Type": "AWS::Kinesis::Stream",
    },
    "testneweventbridgekinesisstreams2KinesisStreamGetRecordsIteratorAgeAlarm0DDE44EA": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Record Processing Falling Behind, there is risk for data loss due to record expiration.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "GetRecords.IteratorAgeMilliseconds",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Maximum",
        "Threshold": 2592000,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testneweventbridgekinesisstreams2KinesisStreamReadProvisionedThroughputExceededAlarm6CC96DC4": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Application is Reading at a Slower Rate Than Expected.",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "ReadProvisionedThroughputExceeded",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testneweventbridgekinesisstreams2eventsRole9E13686D": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Events Rule Role",
      },
      "Type": "AWS::IAM::Role",
    },
    "testneweventbridgekinesisstreams2eventsRoleDefaultPolicyDC91DE52": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "kinesis:ListShards",
                "kinesis:PutRecord",
                "kinesis:PutRecords",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "testneweventbridgekinesisstreams2KinesisStreamBC538A18",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testneweventbridgekinesisstreams2eventsRoleDefaultPolicyDC91DE52",
        "Roles": Array [
          Object {
            "Ref": "testneweventbridgekinesisstreams2eventsRole9E13686D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`snapshot test EventbridgeToKinesisStreams existing event bus params 1`] = `
Object {
  "Resources": Object {
    "testexistingeventbridgekinesisstreamsEventsRule0F78E916": Object {
      "Properties": Object {
        "EventBusName": Object {
          "Ref": "testexistingeventbusC6E4A2D0",
        },
        "EventPattern": Object {
          "source": Array [
            "solutionsconstructs",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "testexistingeventbridgekinesisstreamsKinesisStream9E707E70",
                "Arn",
              ],
            },
            "Id": "Target0",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "testexistingeventbridgekinesisstreamseventsRole4E65203D",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "testexistingeventbridgekinesisstreamsKinesisStream9E707E70": Object {
      "Properties": Object {
        "RetentionPeriodHours": 24,
        "ShardCount": 1,
        "StreamEncryption": Object {
          "EncryptionType": "KMS",
          "KeyId": "alias/aws/kinesis",
        },
      },
      "Type": "AWS::Kinesis::Stream",
    },
    "testexistingeventbridgekinesisstreamsKinesisStreamGetRecordsIteratorAgeAlarm69E05245": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Record Processing Falling Behind, there is risk for data loss due to record expiration.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "GetRecords.IteratorAgeMilliseconds",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Maximum",
        "Threshold": 2592000,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testexistingeventbridgekinesisstreamsKinesisStreamReadProvisionedThroughputExceededAlarmFD48C29F": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Application is Reading at a Slower Rate Than Expected.",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "ReadProvisionedThroughputExceeded",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testexistingeventbridgekinesisstreamseventsRole4E65203D": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Events Rule Role",
      },
      "Type": "AWS::IAM::Role",
    },
    "testexistingeventbridgekinesisstreamseventsRoleDefaultPolicy9C0D7DAA": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "kinesis:ListShards",
                "kinesis:PutRecord",
                "kinesis:PutRecords",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "testexistingeventbridgekinesisstreamsKinesisStream9E707E70",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testexistingeventbridgekinesisstreamseventsRoleDefaultPolicy9C0D7DAA",
        "Roles": Array [
          Object {
            "Ref": "testexistingeventbridgekinesisstreamseventsRole4E65203D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "testexistingeventbusC6E4A2D0": Object {
      "Properties": Object {
        "Name": "testexistingeventbus",
      },
      "Type": "AWS::Events::EventBus",
    },
  },
}
`;
